@@ -975,6 +975,9 @@ UPDATE `item_template` SET `Flags` = 2048 WHERE `entry` = 10639;
 -- Un'Goro Soil (Quest: Un'Goro Soil (Id: 3761), Quest: Un'Goro Soil (Id: 3764), Quest: Bungle in the Jungle (Id: 4496))
 UPDATE `item_template` SET `Flags` = 2048 WHERE `entry` = 11018;
 
+-- Milly's Harvest (Quest: Milly's Harvest (Id: 3904))
+UPDATE `item_template` SET `Flags` = 2048 WHERE `entry` = 11119
+
 -- Dinosaur Bone (Quest: Roll the Bones (Id: 3882))
 UPDATE `item_template` SET `Flags` = 2048 WHERE `entry` = 11114;
 
